--- a/app/src/main/res/layout/dia_import.xml
+++ b/app/src/main/res/layout/dia_import.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:background="@color/background">
+
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -11,14 +12,15 @@
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
         android:background="@android:color/transparent"
-        android:layout_marginBottom="10dp"
-    >
+        android:layout_marginBottom="10dp">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textColor="@color/light_black"
             android:text="@string/import_mode" />
+
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -28,6 +30,7 @@
             android:id="@+id/dia_import_radio_integrate"
             android:buttonTint="@color/ijblue"
             android:checked="true" />
+
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,6 +40,7 @@
             android:id="@+id/dia_import_radio_skip"
             android:buttonTint="@color/ijblue"
             android:checked="false" />
+
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -47,6 +51,7 @@
             android:buttonTint="@color/ijblue"
             android:checked="false" />
     </RadioGroup>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
