--- a/app/src/main/res/layout/dia_info.xml
+++ b/app/src/main/res/layout/dia_info.xml
@@ -4,11 +4,13 @@
     android:background="@color/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:background="@color/background">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -19,7 +21,6 @@
             android:textColor="@color/light_black"
             android:gravity="center"
             android:layout_centerHorizontal="true"
-            android:padding="20dp"
-        />
+            android:padding="20dp" />
     </RelativeLayout>
 </ScrollView>
