--- a/app/src/main/res/layout/rec_view.xml
+++ b/app/src/main/res/layout/rec_view.xml
@@ -2,20 +2,21 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="8dp"
-    >
+        android:padding="8dp">
+
         <TextView
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="@dimen/rec_view_font_size_default"
             android:id="@+id/rec_name"
-            android:textColor="@android:color/black"
-        />
+            android:textColor="@android:color/black" />
+
         <TextView
             android:gravity="center"
             android:layout_width="match_parent"
@@ -24,7 +25,6 @@
             android:layout_marginTop="2dp"
             android:id="@+id/rec_desc"
             android:visibility="gone"
-            android:textColor="@color/dark_grey"
-        />
+            android:textColor="@color/dark_grey" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
