--- a/app/src/main/res/layout/rec_view_collection_or_pack.xml
+++ b/app/src/main/res/layout/rec_view_collection_or_pack.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="12dp"
->
+    android:padding="12dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -12,8 +11,8 @@
         android:layout_gravity="center"
         android:id="@+id/rec_collections_preview_layout"
         android:background="@drawable/rec_view_collection_or_pack_background"
-        android:padding="12dp"
-    >
+        android:padding="12dp">
+
         <com.vanniktech.emoji.EmojiTextView
             android:gravity="center"
             android:layout_width="50dp"
@@ -22,15 +21,15 @@
             android:id="@+id/rec_collections_preview_text"
             android:textColor="@android:color/black"
             android:layout_gravity="center"
-            android:padding="12dp"
-        />
+            android:padding="12dp" />
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="12dp"
-            android:layout_weight="1"
-        >
+            android:layout_weight="1">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -38,24 +37,24 @@
                 android:layout_marginTop="2dp"
                 android:id="@+id/rec_collections_parent"
                 android:visibility="gone"
-                android:textColor="@color/light_black"
-            />
+                android:textColor="@color/light_black" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/rec_view_font_size_default"
                 android:id="@+id/rec_collections_name"
-                android:textColor="@android:color/black"
-            />
+                android:textColor="@android:color/black" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/rec_view_font_size_below_default"
                 android:layout_marginTop="2dp"
                 android:id="@+id/rec_collections_desc"
-                android:textColor="@color/dark_grey"
-            />
+                android:textColor="@color/dark_grey" />
         </LinearLayout>
+
         <TextView
             android:gravity="center_vertical|end"
             android:layout_width="wrap_content"
@@ -64,7 +63,6 @@
             android:id="@+id/rec_collections_number_text"
             android:textColor="@android:color/black"
             android:layout_gravity="end"
-            android:padding="8dp"
-        />
+            android:padding="8dp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
