--- a/app/src/main/res/layout/rec_view_small.xml
+++ b/app/src/main/res/layout/rec_view_small.xml
@@ -2,31 +2,33 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:padding="2dp"
-    >
+        android:padding="2dp">
+
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/rec_small_checkbox"
             android:buttonTint="@color/ijblue" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:padding="4dp"
-        >
+            android:padding="4dp">
+
             <TextView
                 android:gravity="start"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="17sp"
                 android:id="@+id/rec_small_name"
-                android:textColor="@android:color/black"
-            />
+                android:textColor="@android:color/black" />
+
             <TextView
                 android:gravity="start"
                 android:layout_width="match_parent"
@@ -35,8 +37,7 @@
                 android:layout_marginTop="2dp"
                 android:id="@+id/rec_small_desc"
                 android:visibility="gone"
-                android:textColor="@color/dark_grey"
-            />
+                android:textColor="@color/dark_grey" />
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
