--- a/app/src/main/res/menu/menu_edit.xml
+++ b/app/src/main/res/menu/menu_edit.xml
@@ -8,6 +8,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:title="@string/save_changes"
-        android:onClick="saveChanges"
-    />
+        android:onClick="saveChanges" />
 </menu>
