--- a/app/src/main/res/menu/menu_list_cards.xml
+++ b/app/src/main/res/menu/menu_list_cards.xml
@@ -37,8 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:title="@string/new_card"
-        android:onClick="startNewCard"
-    />
+        android:onClick="startNewCard" />
     <item
         android:id="@+id/pack_details"
         android:icon="@drawable/outline_info_24"
@@ -47,8 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:title="@string/pack_details"
-        android:onClick="packDetails"
-    />
+        android:onClick="packDetails" />
     <item
         android:id="@+id/change_front_back"
         android:orderInCategory="400"
@@ -56,8 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:title="@string/change_front_back"
-        android:onClick="changeFrontBack"
-    />
+        android:onClick="changeFrontBack" />
     <item
         android:id="@+id/sort_random"
         android:orderInCategory="500"
@@ -65,6 +62,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:title="@string/sort_random"
-        android:onClick="sort"
-    />
+        android:onClick="sort" />
 </menu>
